# koreapp_3

./: README.md
.github/workflows/: main_fastapi-pruebas-lgarcia.yml
koreapp_2/: README.md
koreapp_2/backend/: Dockerfile  alembic.ini  pyproject.toml
koreapp_2/backend/alembic/: env.py
koreapp_2/backend/alembic/versions/: 001_initial_migration.py
koreapp_2/backend/app/: main.py
koreapp_2/backend/app/ai/: copilot_integration.py  orchestrator.py
koreapp_2/backend/app/api/v1/: api.py
koreapp_2/backend/app/api/v1/endpoints/: ai.py  analysis.py  business_objects.py  health.py
koreapp_2/backend/app/core/: config.py  deps.py  logging.py  security.py
koreapp_2/backend/app/db/: base.py  database.py
koreapp_2/backend/app/models/: analysis.py  business_object.py  relationship.py  system.py
koreapp_2/backend/app/schemas/: analysis.py  business_object.py  user.py
koreapp_2/backend/app/services/: analysis.py  business_object.py  microsoft_graph.py
koreapp_2/backend/tests/: conftest.py  test_business_objects.py  test_health.py
koreapp_2/docs/: README.md  architecture.md
koreapp_2/frontend/: index.html  package.json  tailwind.config.js
koreapp_2/frontend/src/: App.tsx  index.css  main.tsx
koreapp_2/frontend/src/components/: Card.tsx  Layout.tsx  SectionTitle.tsx
koreapp_2/frontend/src/config/: authConfig.ts
koreapp_2/frontend/src/pages/: DashboardPage.tsx  KnowledgeExplorerPage.tsx  LoginPage.tsx  ObjectDetailPage.tsx  ObjectFormPage.tsx  ObjectListPage.tsx  SettingsPage.tsx  StrategicMetricsPage.tsx
koreapp_2/frontend/src/types/: vite-env.d.ts
(+16 files in other folders)
